# Agent-Nimi

./: .gitignore  AI in Cybersecurity: Strategic Analysis and Agent-Nimi Integration.md  ARCHITECTURE.md  Agent-Nimi: Comparative Analysis and Strategic Gap Report.md  Agent-Nimi: SOTA Comparative Analysis & Claude Upgrade Plan (incl. Manus AI).md  Agent-Nimi: SOTA Comparative Analysis & Claude Upgrade Plan.md  Cybersecurity AI Agent_ Framework Research and Architecture Design.md  DATABASE_README.md  GitHub Connector Capabilities Report.md  IMPROVEMENT_PLAN.md  PENTEST_DB_GUIDE.md  README.md  Research Notes: Leading AI Agent Projects.md  TOOLS_REFERENCE.md  agent.py  config.py  entities.json  evaluator.py  init_pentest_db.py  kali_tools.db  kali_tools_inventory.md  main.py  manus_research.md  mempalace.yaml  multiagent.py  pentest.db  pentest.db.backup.20260331_122005  pentest.db.backup.20260331_122152  pentest.db.backup.20260331_122839  pentest_db_schema.sql  pyproject.toml  radar_chart.py  radar_chart_v2.py  requirements.txt  router.py  security_tools.py  seed_tools_db.py  setup.sh  tova_pentest-01.cap  tova_pentest-01.csv  (+6 more)
chrome-extension/: background.js  content.js  manifest.json  sidepanel.js  style.css
core/: __init__.py  agent.py  audit.py  decomposer.py  episodic_memory.py  evaluator.py  fact_memory.py  knowledge_base.py  memory.py  monitor.py  multiagent.py  progress.py  provider_check.py  router.py  self_edit.py  self_model.py  session_memory.py  strategy_memory.py  validator.py  workflows.py  world_state.py
providers/: __init__.py  base.py  grok_provider.py  (+2 more)
(+40 files in other folders)
