[project]
name = "agent-nimi"
version = "0.2.0"
description = "Offensive cybersecurity AI agent for Kali Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "python-whois>=0.9.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B904",   # raise from in except (too noisy for this codebase)
    "SIM108", # ternary operator (readability preference)
    "RUF012", # mutable class attributes (dataclass pattern)
    "UP007",  # use X | Y for union (already used, keep consistent)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "providers", "tools", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
